# privacy-preserving-cloud

./: .gitignore  CMakeLists.txt  README.md
src/crypto/: GroupSig.hpp  RSAGroupSig.cpp  Utils.cpp
src/csp/: main.cpp
src/rm/: RevocationList.cpp  main.cpp
tests/: test_crypto.cpp
